0.9-2
- remove unwanted files during build process

0.9-1
- pwelch(): fix bug in frequency
- tidem(): add argument 'regress'
- rename oce.plot.sticks() as plotSticks(); delete stickplot()
- use S4 style for all plot() methods
- data(giss) added
- data(topo2) added
- plotPolar() added
- oceMagic() new name for magic()
- errorBars() added
- numberAsPOSIXct() add a leap second for July 2012

0.8-10
- plot.topo(): automatic cut-point shift
- add support for Nortek aquadopp-profiler instruments
- oceContour() added
- lisst class added
- plotTaylor() added
- oce.as.raw() added
- binmap() added

0.8-9
- make the newly-added TEOS-10 functions compile on Windows

0.8-8
- data(cm) added
- plot.coastline(): improve argument 'geographical'
- add prettyPosition()
- add grad()
- add (preliminary) support for the TEOS-10 library, which must be installed separately
- add integrateTrapezoid()
- plotTS(): add argument teos
- add teos() as an interface to the TEOS-10 library
- add moonAngle() plus several other astronomy-related functions, e.g. julianDay()

0.8-7
- plotInset(): remove 'bg' and 'fg' arguments
- plotTS(): add 'bg' argument
- rename 'dt' object and functions to 'tdr'
- plotTS(): add argument 'inset'
- read.adp.rdi(): fix a bug in bottom-tracking; add soundSpeed vector
- data(echosounder) created
- formatPosition() created
- plot(echosounder): new arguments atTop and labelsTop
- adp objects now also hold 'percent good' for RDI instruments
- plot.drifter(): improve multi-panel plots
- imagep(): add argument 'missingColor'
- imagep() and drawPalette(): add arguments 'labels' and 'at'

0.8-6
- imagep(): permit POSIXt type for zlim

0.8-5
- reconstruct data(ctd) so plot will focus maps better
- plotInset() added
- grid() works for oce-based time axes
- imagep(..., filledContours): obey ylab argument
- subset(): permit subsetting ADP by pressure
- oce.plot.ts(): obey arguments xaxt and yaxt
- improve support for shapefile coastlines

0.8-4