@@ -1,4 +1,6 @@
 0.9-2
+- as.ctd(): accept TEOS-10 values SA and CT
+- make TEOS routines more resistant to unphysical values
 - remove unwanted files during build process
 
 0.9-1
